--- a/client/src/components/SubComponents/Sidebar/sidebar.css
+++ b/client/src/components/SubComponents/Sidebar/sidebar.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   /* padding: 20px; */
   min-width: 10rem;
-  align-items: start;
-  min-height: 100vh;
+  /* align-items: start; */
+  min-height: 100vh !important;
   /* background: #FF652F; burnt orange*/
   /* background: #239191; dark turquoise*/
   /* background: #333577; the blue */
@@ -13,13 +13,14 @@
   /* background: #FF6122;  */
   background: #162238;
   justify-content: space-between;
+  margin-right: 1px;
 }
 
 .static-sidebar {
   border-right: 1px solid black;
   min-width: 10rem;
   /* min-height: 100vh !important; */
-  /* padding: 0 !important; */
+  padding: 0 !important;
   position: fixed !important;
   display: flex;
   flex-direction: column;
@@ -41,7 +42,7 @@
 .sidebar .logout {
   /* margin-top: 3rem; */
   margin-top: 1rem;
-  position: fixed;
-  bottom: 0px;
+  /* position: fixed;
+  bottom: 0px; */
   color: #f2f2f0;
 }
